# DynaHex

./: CMakeLists.txt  README.md  main.cpp
include/dynaHex/: body.h  collide_broad.h  collide_narrow.h  contacts.h  core.h  fgen.h  joints.h  particle.h  pcontacts.h  pfgen.h  plinks.h  precision.h  pworld.h  random.h  world.h
scr/: body.cpp  collide_broad.cpp  collide_narrow.cpp  contacts.cpp  core.cpp  fgen.cpp  joints.cpp  particle.cpp  pcontacts.cpp  pfgen.cpp  plinks.cpp  pworld.cpp  random.cpp  world.cpp
scr/demos/: Application.h
scr/demos/Particles/: BallisticDemo.cpp  BallisticDemo.h
scr/demos/Particles/Ballistic/: BallisticDemo.cpp  BallisticDemo.h
scr/demos/Particles/Firework/: Firework.cpp  FireworkDemo.cpp  FireworkDemo.h
